--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,20 +1,20 @@
 @font-face {
   font-family: "Source Sans 3";
-  src: url("SourceSans3-VariableFont_wght.ttf") format("truetype");
+  src: url("fonts/SourceSans3-VariableFont_wght.ttf") format("truetype");
   font-weight: 200 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Source Sans 3";
-  src: url("SourceSans3-Italic-VariableFont_wght.ttf") format("truetype");
+  src: url("fonts/SourceSans3-Italic-VariableFont_wght.ttf") format("truetype");
   font-weight: 200 900;
   font-style: italic;
 }
 
 html,
 body,
-p {
+* {
   font-family: "Source Sans 3", sans-serif;
   font-weight: 400; /* Utilisation d'une valeur normale. Vous pouvez la modifier pour obtenir des poids différents. */
 }
@@ -31,4 +31,8 @@ em {
   .fw-#{$i}00 {
     font-weight: $i * 100;
   }
+}
+
+.lhn {
+  line-height: normal;
 }
